<resources>
    <string name="app_name">Foodbook</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="monospace">monospace</string>
    <string name="search">SEARCH</string>
    <string name="register">REGISTER</string>
    <string name="loginUpper">LOGIN</string>
    <string name="invalidLocationOrCuisine">Invalid cuisine or location entered!</string>
    <string name="invalidCountryOrCity">Invalid country or city entered!</string>
    <string name="location">location</string>
    <string name="reserve">reserve</string>
    <string name="title_activity_single_restauirant">Map</string>=
    <string name="labelDatePicker">Choose reservation date:</string>
    <string name="labelTimePicker">Choose reservation time:</string>
    <string name="inviteReservation">Invite</string>
    <string name="finishReservation">Finish</string>
    <string name="cancelReservation">Cancel</string>
    <string name="submitUpper">SUBMIT</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="confirmUpper">CONFIRM</string>
    <string name="inviteUpper">INVITE</string>
    <string name="finishUpper">FINISH</string>
    <string name="cancelUpper">CANCEL</string>
    <string name="home">Home</string>
    <string name="reservations">Reservations</string>
    <string name="map">Map</string>
    <string name="changePassword">Change password</string>
    <string name="searchSmall">Search</string>
    <string name="callRestaurant">CALL US NOW</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="pickDate">PICK DATE</string>
    <string name="pickTime">PICK TIME</string>
    <string name="duration">Duration (hours)</string>
    <string name="persons">Persons</string>
    <string name="city">City</string>
    <string name="foodType">Food type</string>
    <string name="searchRestaurant">Search for restaurants</string>
    <string name="information">Information</string>
    <string name="myReservations">My reservations</string>
    <string name="oldPassword">Old password</string>
    <string name="newPassword">New password</string>
    <string name="repeatNewPassword">Repeat new password</string>
    <string name="addComment">Add comment</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="searbian">Serbian</string>
    <string name="rateUs">Rate us</string>
    <string name="emptyComment">You can not post an empty comment.</string>
    <string name="didntChoose">You did not choose you rating.</string>
    <string name="seats">seats</string>
    <string name="enterComment">Enter comment</string>
    <string name="restaurantDetails">Restaurant details</string>
    <string name="inviteFriends">Invite friends</string>
    <string name="friendsEmail">Friends email</string>
    <string name="selectLanguage">Select language</string>

    <string name="viewComments">View comments</string>
</resources>
