<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/drawer_layout_invite_friends"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true">

<!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <LinearLayout
        android:id="@+id/content_frame_invite_friends"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrayBackground"
        android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar_invite_friends"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorTheme"

                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/friendsEmail"
                android:textColorHint="#000000"/>

            <ListView
                android:layout_width="wrap_content"
                android:id="@+id/invitedFriendsListView"
                android:layout_height="wrap_content"></ListView>


            <Button
                android:layout_marginTop="40dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/inviteReservation"
                android:id="@+id/inviteButton"
                android:background="@color/colorTheme" />

            <Button
                android:layout_marginTop="40dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/finishReservation"
                android:id="@+id/finishButton"
                android:background="@color/colorTheme" />

            <Button
                android:layout_marginTop="40dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/cancelReservation"
                android:id="@+id/cancelButton"
                android:background="@color/colorTheme" />

        </LinearLayout>
    <include layout="@layout/content_invite_friends" />

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_invite_friends"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"
        android:background="@color/colorGrayBackground">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>