<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <RelativeLayout
        android:id="@+id/content_frame_change_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrayBackground">

        <LinearLayout
            android:id="@+id/changePasswordLayout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_below="@+id/my_toolbar_change_password"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="50dp"
                app:passwordToggleEnabled="true"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/oldPassword"
                    android:hint="@string/oldPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:passwordToggleEnabled="true"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/newPassword"
                    android:hint="@string/newPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:passwordToggleEnabled="true"
                app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/repeatNewPassword"
                    android:hint="@string/repeatNewPassword" />
            </android.support.design.widget.TextInputLayout>



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmUpper"
                android:id="@+id/confirmButton"
                android:layout_marginBottom="19dp"
                android:background="@color/accent_material_dark"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar_change_password"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorTheme"

            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <!-- <include layout="@layout/content_main" />-->

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_change_password"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"
        android:background="@color/colorGrayBackground">

    </android.support.design.widget.NavigationView>



</android.support.v4.widget.DrawerLayout>